One more improvement on the draft.
This version seems to be ready to a pre-review. It only lacks
the technical specification.

--- a/doc/proposal_allocator.tex
+++ b/doc/proposal_allocator.tex
@@ -87,7 +87,7 @@ urlcolor=blue           % color of external links
 \noindent
 {\bf Abstract: }This is a non-breaking proposal to the C++ standard
 that aims to reduce allocator complexity, support realtime allocation
-and improve performance on node-based containers through the addition
+and improve performance of node-based containers through the addition
 of overloads of the \texttt{allocate} and
 \texttt{deallocate} member functions in the allocator interface. An
 example implementation that explores the proposed feature is provided
