--- a/doc/proposal_allocator.tex
+++ b/doc/proposal_allocator.tex
@@ -88,10 +88,9 @@ urlcolor=blue           % color of external links
 {\bf Abstract: }This is a non-breaking proposal to the C++ standard
 that aims to reduce allocator complexity, support realtime allocation
 and improve performance of node-based containers through the addition
-of overloads of the \texttt{allocate} and
-\texttt{deallocate} member functions in the allocator interface. An
-example implementation that explores the proposed feature is provided
-together with benchmarks.
+of overloads of the \texttt{allocate} and \texttt{deallocate} member
+functions. An example implementation that explores the proposed
+feature is provided together with benchmarks.
 
 \tableofcontents
 
@@ -146,7 +145,7 @@ void deallocate(pointer p)
 }
 \end{lstlisting}
 which differ from their standard interfaces by the fact
-that they do not and cannot manage different allocation sizes.
+that they do not take the size as a parameter.
 
 \section{Motivation and scope}
 
